--- a/src/app/components/status-color-picker.component.html
+++ b/src/app/components/status-color-picker.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button (click)="openDialog()">
+<button mat-icon-button (click)="openDialog()" i18n-matTooltip matTooltip="Change the statuses colors">
   <mat-icon [fontIcon]="getIcon('icon')" />
 </button>
