--- a/src/app/components/status-color-picker.dialog.component.html
+++ b/src/app/components/status-color-picker.dialog.component.html
@@ -2,28 +2,37 @@
 
 <form [formGroup]="statusesForm" mat-dialog-content>
   @for(status of statuses; track status) {
-  <article>
-    <section class="header">
-      @let icon = statusesRecord[status].icon;
-      @if(icon) {
-        <mat-icon [fontIcon]="getIcon(icon)" />
-      }
-      <h3>{{ statusesRecord[status].label }}</h3>
-    </section>
-    <section>
-      <input type="color" [value]="getValue(status)" [formControlName]="status.toString()" i18n-matTooltip matTooltip="Pick a color" />
-      <mat-form-field appearance="outline" subscriptSizing="dynamic">
-        <mat-label for="color-text" i18n>Color</mat-label>
-        <input matInput id="color-text" type="text" [value]="getValue(status)" [formControlName]="status.toString()" />
-      </mat-form-field>
-      <button mat-icon-button (click)="copy(status)" i18n-matTooltip matTooltip="Copy the color value">
-        <mat-icon [fontIcon]="getIcon('copy')" />
-      </button>
-      <button mat-icon-button (click)="reset(status)" i18n-matTooltip matTooltip="Reset the color to its previous value">
-        <mat-icon [fontIcon]="getIcon('cancelling')" />
-      </button>
-    </section>
-  </article>
+    @let control = getControl(status);
+    @if (control) {
+      <article>
+      <section class="header">
+        @let icon = statusesDefault[status].icon;
+        @if(icon) {
+          <mat-icon [fontIcon]="getIcon(icon)" />
+        }
+        <h3>{{ statusesDefault[status].label }}</h3>
+      </section>
+      <section>
+        <input type="color" [value]="control.value" [formControlName]="status.toString()" i18n-matTooltip matTooltip="Pick a color" />
+        <mat-form-field appearance="outline" subscriptSizing="dynamic">
+          <mat-label for="color-text" i18n>Color</mat-label>
+          <input matInput id="color-text" type="text" [value]="control.value" [formControlName]="status.toString()" />
+        </mat-form-field>
+        <button mat-icon-button (click)="copy(status)" i18n-matTooltip matTooltip="Copy the color value">
+          <mat-icon [fontIcon]="getIcon('copy')" />
+        </button>
+        @if (control.dirty) {
+          <button mat-icon-button (click)="reset(status)" i18n-matTooltip matTooltip="Reset the color to its previous value">
+            <mat-icon [fontIcon]="getIcon('cancelling')" />
+          </button>
+        } @else {
+          <button mat-icon-button (click)="resetDefault(status)" [disabled]="statusesDefault[status].color === control.value" i18n-matTooltip matTooltip="Reset the color to its default value">
+            <mat-icon [fontIcon]="getIcon('delete')" />
+          </button>
+        }
+      </section>
+    </article>
+    }
 }
 </form>
 
