chore: tests and doc for graph component

--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -8,9 +8,9 @@
         <mat-icon>{{ getIcon('back') }}</mat-icon>
         Back to Sessions List 
       </a>
-      <button mat-flat-button color="primary" (click)="refresh()">
+      <button mat-flat-button color="primary" (click)="redraw()">
         <mat-icon>{{getIcon('refresh')}}</mat-icon>
-        <span i18n>Refresh</span>
+        <span i18n>Redraw</span>
       </button>
     </section>
     <section>
