--- a/src/app/components/dialogs/columns-modify-dialog/components/columns-modify-area.component.html
+++ b/src/app/components/dialogs/columns-modify-dialog/components/columns-modify-area.component.html
@@ -1,10 +1,13 @@
 <article>
-  <ng-content select="[title]" />
+  <div>
+    <mat-checkbox (change)="selectAllOnClick($event)" [checked]="count === allColumns.length" [indeterminate]="count !== 0 && count !== allColumns.length" />
+    <ng-content select="[title]" />
+  </div>
   <p>{{ count }} <span i18n>selected</span></p>
 </article>
 <section>
   @for (column of allColumns; track $index) {
-    <mat-checkbox (change)="updateColumn($event, column)" [checked]="isSelected(column)">
+    <mat-checkbox (change)="selectOne($event, column)" [checked]="isSelected(column)">
         {{ (column | customColumnPipe) ?? columnsLabels[column] }}
     </mat-checkbox>
   }
