--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -1,28 +1,33 @@
 <mat-card appearance="outlined">
-  <mat-card-header>
-    <mat-card-title>Session: {{ sessionId }}</mat-card-title>
-  </mat-card-header>
-  <mat-card-actions>
+  <mat-card-content>
     <section>
-      <a mat-flat-button color="primary" routerLink="/sessions">
-        <mat-icon>{{ getIcon('back') }}</mat-icon>
-        Back to Sessions List 
-      </a>
-      <button mat-flat-button color="primary" (click)="redraw()">
-        <mat-icon>{{getIcon('refresh')}}</mat-icon>
-        <span i18n>Redraw</span>
+      <h2>
+        <span i18n>Session:</span>
+        {{ sessionId }}
+      </h2>
+      <button mat-icon-button>
+        <mat-icon [fontIcon]="getIcon('copy')" />
       </button>
     </section>
     <section>
-      <mat-form-field appearance="outline" subscriptSizing="dynamic">
-        <mat-label for="id-input" i18n>Highlight a task</mat-label>
-        <input matInput type="text" (change)="highlightNodes($event)" />
-      </mat-form-field>
-      <mat-checkbox (change)="setParticles($event.checked)" i18n>
-        Display Particles
-      </mat-checkbox>
+      <a mat-flat-button color="primary" routerLink="/sessions">
+        <span i18n>Back to Sessions List</span> 
+      </a>
+      <a mat-flat-button color="primary" routerLink="/sessions">
+        <span i18n>See Session</span> 
+      </a>
+      <button mat-flat-button color="accent" (click)="redraw()">
+        <mat-icon>{{ getIcon('refresh') }}</mat-icon>
+        <span i18n>Redraw</span>
+      </button>
     </section>
+  </mat-card-content>
+  <mat-card-actions>
+    <app-autocomplete [options]="nodesIds" [label]="highlightLabel" (valueChange)="highlightNodes($event)" />
+    <mat-checkbox (change)="setParticles($event.checked)" i18n>
+      Display Particles
+    </mat-checkbox>
   </mat-card-actions>
 </mat-card>
-<app-graph-legend />
+<app-graph-legend [links]="colorMap" />
 <div class="graph" #graph (window:resize)="onResize($event)"></div>
