chore: address comments

--- a/src/app/components/dialogs/columns-modify-dialog/columns-modify-dialog.component.html
+++ b/src/app/components/dialogs/columns-modify-dialog/columns-modify-dialog.component.html
@@ -20,7 +20,7 @@
 
   @if (objectArrayColumns.length !== 0) {
     <app-columns-modify-area [columnsLabels]="columnsLabels" [selectedColumns]="selectedColumns.value" [columns]="objectArrayColumns" (checked)="selectOne($event)" (selectAll)="selectAll(objectArrayColumns, $event)">
-      <h3 title i18n>Objets & Arrays Columns</h3>
+      <h3 title i18n>Objects & Arrays Columns</h3>
     </app-columns-modify-area>
   }
 
