--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -5,7 +5,7 @@
         <span i18n>Session:</span>
         {{ sessionId }}
       </h2>
-      <button mat-icon-button>
+      <button mat-icon-button i18n-matToolTip matTooltip="Copy the session Id">
         <mat-icon [fontIcon]="getIcon('copy')" />
       </button>
     </section>
@@ -18,12 +18,18 @@
       </a>
       <button mat-flat-button color="accent" (click)="redraw()">
         <mat-icon>{{ getIcon('refresh') }}</mat-icon>
-        <span i18n>Redraw</span>
+        <span i18n-matToolTip matTooltip="Use this button in case the graph is not readable" i18n>Redraw</span>
       </button>
     </section>
   </mat-card-content>
   <mat-card-actions>
     <app-autocomplete [options]="nodesIds" [label]="highlightLabel" (valueChange)="highlightNodes($event)" />
+    <mat-checkbox (change)="toggleHighlightParentNodes($event.checked)" [checked]="highlightParentNodes" i18n>
+      Highlight parent nodes
+    </mat-checkbox>
+    <mat-checkbox (change)="toggleHighlightChildrenNodes($event.checked)" [checked]="highlightChildrenNodes" i18n>
+      Highlight children nodes
+    </mat-checkbox>
     <mat-checkbox (change)="setParticles($event.checked)" i18n>
       Display Particles
     </mat-checkbox>
