--- a/src/app/tasks/index.component.html
+++ b/src/app/tasks/index.component.html
@@ -23,10 +23,14 @@
       (addToDashboard)="onAddToDashboard()"
       >
         <ng-container extra-buttons-right>
-          <button mat-flat-button color="accent" (click)="onCancelTasksSelection()" [disabled]="!selection.length">
-            <mat-icon matListIcon aria-hidden="true" fontIcon="stop"/>
-            <span i18n> Cancel Tasks </span>
-          </button>
+          <!-- @if (selection) {
+            @for (action of grpcActionsService.actions; track $index) {
+            <button mat-flat-button color="accent" (click)="action.action$.next(selection)"  [disabled]="selection.length === 0">
+              <span i18n>{{ action.label }}s</span>
+              <mat-icon [fontIcon]="this.getIcon(action.icon)" />
+            </button>
+            }
+          } -->
         </ng-container>
         <ng-container extra-menu-items>
         <button mat-menu-item (click)="manageViewInLogs()">
