--- a/src/app/components/table/table-actions.component.html
+++ b/src/app/components/table/table-actions.component.html
@@ -2,8 +2,8 @@
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Actions" i18n-aria-label>
     <mat-icon fontIcon="more_vert" />
   </button>
-} @else if (actions[0].condition && actions[0].condition(element) || !actions[0].condition) {
-  <button mat-button (click)="actions[0].action$.next(element)">
+} @else if (actions[0].condition && actions[0].condition([element.raw]) || !actions[0].condition) {
+  <button mat-button (click)="actions[0].click([element.raw])">
     <mat-icon [fontIcon]="getIcon(actions[0].icon)"/>
     <p>{{ actions[0].label }}</p>
   </button>
@@ -11,8 +11,8 @@
 
 <mat-menu #menu="matMenu">
   @for (action of actions; track action.label) {
-    @if (action.condition && action.condition(element) || !action.condition) {
-      <button mat-menu-item (click)="action.action$.next(element)">
+    @if (!action.condition || action.condition([element.raw])) {
+      <button mat-menu-item (click)="action.click([element.raw])">
       <mat-icon [fontIcon]="getIcon(action.icon)"/>
       <p>{{ action.label }}</p>
     </button>
