chore: adress comments

--- a/src/app/components/table/table-column-header.component.html
+++ b/src/app/components/table/table-column-header.component.html
@@ -6,7 +6,7 @@
 } @else if(type === 'count') {
   <!-- Header for count columns -->
   {{ name }}
-  <button mat-icon-button (click)="onPersonnalizeStatuses()" i18n-matTooltip
+  <button mat-icon-button (click)="onPersonalizeStatuses()" i18n-matTooltip
     matTooltip="Personalize Statuses">
     <mat-icon aria-hidden="true" [fontIcon]="icon" />
   </button>
