--- a/src/app/tasks/index.component.html
+++ b/src/app/tasks/index.component.html
@@ -64,5 +64,6 @@
   [urlTemplate]="urlTemplate"
   (retries)="onRetries($event)"
   (optionsUpdate)="onOptionsChange()"
+  (selectionChange)="onSelectionChange($event)"
 />
   
