chore: Filter chip opens filter dialog

--- a/src/app/components/filters/filters-toolbar.component.html
+++ b/src/app/components/filters/filters-toolbar.component.html
@@ -27,7 +27,10 @@
                 Or
               </span>
             }
-            <app-filters-chips [filtersAnd]="filtersAnd"/>
+            <app-filters-chips 
+              [filtersAnd]="filtersAnd" 
+              [customColumns]="customColumns"
+              (filtersChange)="onFiltersChange($event)"/>
           </div>
         
         }
