--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -26,6 +26,9 @@
   <app-external-services />
   <app-versions-menu />
   <app-theme-selector/>
+  <button mat-icon-button [routerLink]="'/profile'" matTooltip="Profil" i18n-matTooltip="Profile button tooltip">
+    <mat-icon>person</mat-icon>
+  </button>
 </mat-toolbar>
 <mat-sidenav-container autosize class="sidenav-container">
   <mat-sidenav #drawer class="sidenav"
