--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,13 @@ app-table-index-actions-toolbar, app-table-dashboard-actions-toolbar {
 .filters {
   height: auto !important;
   min-height: 64px !important;
+}
+
+.grpc-actions {
+  height: fit-content !important;
+}
+
+.index-toolbar {
   padding-bottom: 1rem !important;
 }
 
