chore: move all html to html files and remove useless components

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -29,8 +29,8 @@
 
     <!-- Empty -->
     <tr *matNoDataRow>
-      <td [attr.colspan]="columns.length">
-        <app-table-empty-data />
+      <td [attr.colspan]="columns.length" id="empty">
+        <em i18n>No data found.</em>
       </td>
     </tr>
 
