--- a/src/app/dashboard/components/lines/task-by-status-line.component.html
+++ b/src/app/dashboard/components/lines/task-by-status-line.component.html
@@ -1,48 +1,46 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <app-actions-toolbar>
-      <app-actions-toolbar-group>
-        <app-refresh-button [tooltip]="autoRefreshTooltip()" (refreshChange)="onRefresh()"/>
-        @if (loading()) {
-          <app-spinner/>
-        }
-      </app-actions-toolbar-group>
+    <section>
+      <app-refresh-button [tooltip]="autoRefreshTooltip()" (refreshChange)="onRefresh()"/>
+      @if (loading()) {
+        <app-spinner/>
+      }
+    </section>
 
-      <app-actions-toolbar-group>
-        <app-auto-refresh-button [intervalValue]="line.interval" (intervalValueChange)="onIntervalValueChange($event)"/>
+    <section>
+      <app-auto-refresh-button [intervalValue]="line.interval" (intervalValueChange)="onIntervalValueChange($event)"/>
 
-        <button  mat-icon-button [matMenuTriggerFor]="menu" aria-label="Show more options" i18n-aria-label matTooltip="More Options" i18n-matTooltip>
-          <mat-icon class="add-button" aria-hidden="true" [fontIcon]="getIcon('more')"/>
+      <button  mat-icon-button [matMenuTriggerFor]="menu" aria-label="Show more options" i18n-aria-label matTooltip="More Options" i18n-matTooltip>
+        <mat-icon class="add-button" aria-hidden="true" [fontIcon]="getIcon('more')"/>
+      </button>
+
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="onToggleGroupsHeader()">
+          <mat-icon aria-hidden="true" [fontIcon]="line.hideGroupsHeader ? getIcon('view') : getIcon('view-off')"/>
+          <span i18n>
+            Toggle Groups Header
+          </span>
         </button>
-
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="onToggleGroupsHeader()">
-            <mat-icon aria-hidden="true" [fontIcon]="line.hideGroupsHeader ? getIcon('view') : getIcon('view-off')"/>
+        <button mat-menu-item (click)="onManageGroupsDialog()">
+          <mat-icon aria-hidden="true" [fontIcon]="getIcon('tune')"/>
+          <span i18n>
+            Manage Groups
+          </span>
+        </button>
+        <button mat-menu-item (click)="onEditNameLine(line.name)">
+          <mat-icon aria-hidden="true"  [fontIcon]="getIcon('edit')"/>
             <span i18n>
-              Toggle Groups Header
+              Edit name line
             </span>
-          </button>
-          <button mat-menu-item (click)="onManageGroupsDialog()">
-            <mat-icon aria-hidden="true" [fontIcon]="getIcon('tune')"/>
+        </button>
+        <button mat-menu-item (click)="onDeleteLine(line)">
+            <mat-icon aria-hidden="true" [fontIcon]="getIcon('delete')"/>
             <span i18n>
-              Manage Groups
+              Delete line
             </span>
-          </button>
-          <button mat-menu-item (click)="onEditNameLine(line.name)">
-            <mat-icon aria-hidden="true"  [fontIcon]="getIcon('edit')"/>
-              <span i18n>
-                Edit name line
-              </span>
-          </button>
-          <button mat-menu-item (click)="onDeleteLine(line)">
-              <mat-icon aria-hidden="true" [fontIcon]="getIcon('delete')"/>
-              <span i18n>
-                Delete line
-              </span>
-          </button>
-        </mat-menu>
-      </app-actions-toolbar-group>
-    </app-actions-toolbar>
+        </button>
+      </mat-menu>
+    </section>
   </mat-toolbar-row>
 
   <mat-toolbar-row class="filters">
