--- a/src/app/dashboard/index.component.html
+++ b/src/app/dashboard/index.component.html
@@ -36,7 +36,7 @@
   
   <main class="lines" [style]="'grid-template-columns: repeat(' + columns + ', 1fr);'">
     @for (line of lines; track line.name+line.type) {
-      <app-page-section>
+      <section>
         <app-page-section-header [icon]="getLineIcon(line.type)">
           <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
         </app-page-section-header>
@@ -60,6 +60,6 @@
             <app-dashboard-tasks-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
           }
         }
-      </app-page-section>
+      </section>
     }
   </main>
