--- a/src/app/profile/index.component.html
+++ b/src/app/profile/index.component.html
@@ -11,7 +11,7 @@
     This is your profile page. You can see your user data below.
   </p>
 
-  <app-page-section>
+  <section>
     <app-page-section-header icon="group">
       Roles
     </app-page-section-header>
@@ -34,9 +34,9 @@
     }
   
     <!-- TODO: Add a button to read more about permissions -->
-  </app-page-section>
+  </section>
   
-  <app-page-section>
+  <section>
     <app-page-section-header icon="lock">
       <span i18n="Section title"> Permissions </span>
     </app-page-section-header>
@@ -67,5 +67,5 @@
         </em>
       </p>
     }
-  </app-page-section>
+  </section>
 }
