--- a/src/app/profile/index.component.html
+++ b/src/app/profile/index.component.html
@@ -45,10 +45,10 @@
       <div class="permissions">
         @for (group of groupedPermissions(); track group.name) {
           <div class="permission">
-            <h3>
+            <div class="permission-title">
               <mat-icon matListItemIcon aria-hidden="true" [fontIcon]="getIcon(group.name)"></mat-icon>
-              {{ group.name }}
-            </h3>
+              <h3>{{ group.name }}</h3>
+            </div>
             <ul>
               <!-- TODO: Create a page in documentation (ArmoniK) in order to explain what's does that mean -->
               @for (permission of group.permissions; track permission) {
