--- a/src/app/settings/index.component.html
+++ b/src/app/settings/index.component.html
@@ -56,7 +56,7 @@
   </article>
 
   <article>
-    <section>
+    <section class="filters-cache">
       <app-page-section-header [icon]="getIcon('filter')">
         <span i18n> Filters Cache </span>
       </app-page-section-header>
