--- a/src/app/components/auto-refresh-button.component.scss
+++ b/src/app/components/auto-refresh-button.component.scss
@@ -1,5 +1,7 @@
+@use 'styles' as *;
+
 .auto-refresh-disabled {
   border: 0px;
-  color: #8A8A8A;
-  background-color: #D7D7D7;   
+  color: $grey-font;
+  background-color: $grey;   
 }
