--- a/src/app/components/page-header.component.scss
+++ b/src/app/components/page-header.component.scss
@@ -1,20 +1,16 @@
-.page-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+@use 'styles' as *;
 
+.page-header {
+  @include flex-row();
   margin-bottom: 1rem;
 }
 
 .page-header h1 {
   margin: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  @include flex-row();
   gap: 1rem;
 }
 
 #header-right {
-  display: flex;
-  align-items: center;
+  @include flex-row();
 }
