--- a/src/app/dashboard/components/statuses-group-card.component.scss
+++ b/src/app/dashboard/components/statuses-group-card.component.scss
@@ -7,10 +7,7 @@ ul {
 }
 
 ul li a {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  @include flex-row();
 
   color: inherit;
   text-decoration: none;
