--- a/src/app/dashboard/index.component.scss
+++ b/src/app/dashboard/index.component.scss
@@ -1,32 +1,25 @@
+@use 'styles' as *;
+
 .fab {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
 
   z-index: 150;
-
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 1rem;
+  @include flex-col(1rem);
 }
 
 .fab-actions {
-  display: flex;
-  flex-direction: column-reverse;
+  @include flex-col(1rem);
   align-items: center;
-  justify-content: center;
   gap: 1rem;
 }
 
 .no-line {
   margin-top: 2rem;
 
-  display: flex;
-  flex-direction: column;
+  @include flex-col(2rem);
   align-items: center;
-  justify-content: center;
-
-  gap: 2rem;
 }
 
 .lines {
