--- a/src/app/settings/index.component.scss
+++ b/src/app/settings/index.component.scss
@@ -1,11 +1,12 @@
+@use 'styles' as *;
+
 app-page-section + app-page-section {
   display: block;
   margin-top: 2rem;
 }
 
 main {
-  display: flex;
-  justify-content: space-between;
+  @include flex-row($align: start);
 }
 
 .sidebar-items {
@@ -13,16 +14,11 @@ main {
   padding: 0;
   margin: 0;
 
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  @include flex-col(1rem);
 }
 
 .sidebar-items li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1rem;
+  @include flex-row($gap: 1rem, $justify: start);
 }
 
 .add-sidebar-item {
@@ -45,10 +41,16 @@ main {
   white-space: nowrap;
 }
 
+.export, .storage, .sidebar, .import, .filters-cache {
+  @include flex-col(0.5rem);
+
+  button {
+    width: fit-content;
+  }
+}
+
 .import .file {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
+  @include flex-row(1rem)
 }
 
 .file {
@@ -56,12 +58,13 @@ main {
 }
 
 .actions {
-  display: flex;
-  gap: 1rem;
+  @include flex-row(1rem);
+  width: fit-content;
 }
 
 .between {
   justify-content: space-between;
+  width: 100%;
 }
 
 .storage {
@@ -77,12 +80,8 @@ main {
 }
 
 .cdk-drag-preview {
-  list-style: none;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1rem;
+  @include flex-row($gap: 1rem, $justify: start);
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .cdk-drag-placeholder {
