--- a/src/app/tasks/components/manage-view-in-logs-dialog.component.scss
+++ b/src/app/tasks/components/manage-view-in-logs-dialog.component.scss
@@ -1,24 +1,22 @@
+@use 'styles' as *;
+
 mat-dialog-content {
-  padding-top: 0!important;
-  overflow: visible!important;
-  display: flex;
-  flex-direction: column;
+  padding-top: 0 !important;
+  overflow: visible !important;
+  @include flex-col(0.5rem);
 }
 
 .service-decoration {
-  display: flex;
-  align-items: start;
-  gap: 1rem;
+  @include flex-row($gap: 1rem, $justify: start, $align: start);
+
+  .preview {
+    @include flex-row();
+    margin-top: 0.5rem;
+  }
 }
 
 .url-service {
   width: 100%;
-}
-
-.preview {
-  display: flex;
-  align-items: center;
-  margin-top: 2px;
 }
 
 .manage-presentation {
